# repo-insights

./: README.md  pyproject.toml
repo_insights/: hotspots.py
repo_insights/config/: hotspots.yaml
